--- a/index.html
+++ b/index.html
@@ -1,89 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>彭强的个人简历</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
+    <script src="//at.alicdn.com/t/font_1426001_29h1qtuc7sk.js">
+    </script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 
 <body>
-    <div class="topNavBar clearfix">
-        <a class="logo" href="#" style="float: left" style="float: left;">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav style="float: right">
-            <ul class="clearfix">
-                <li>
-                    <a href="#">关于</a>
-                </li>
-                <li>
-                    <a href="#">技能</a>
-                </li>
-                <li>
-                    <a href="#">作品</a>
-                </li>
-                <li>
-                    <a href="#">博客</a>
-                </li>
-                <li>
-                    <a href="#">日历</a>
-                </li>
-                <li>
-                    <a href="#">联系方式</a>
-                </li>
-                <li>
-                    <a href="#">其他</a>
-                </li>
-            </ul>
-        </nav>
+    <div class="topNavBar">
+        <div class="topNavBar-inner clearfix">
+            <a class="logo" href="#" alt="logo" style="float: left;">
+                <span class="rs">RS</span>
+                <span class="card">card</span>
+            </a>
+            <nav style="float: right;">
+                <ul class="clearfix">
+                    <li>
+                        <a href="#">关于</a>
+                    </li>
+                    <li>
+                        <a href="#">技能</a>
+                    </li>
+                    <li>
+                        <a href="#">作品</a>
+                    </li>
+                    <li>
+                        <a href="#">博客</a>
+                    </li>
+                    <li>
+                        <a href="#">日历</a>
+                    </li>
+                    <li>
+                        <a href="#">联系方式</a>
+                    </li>
+                    <li>
+                        <a href="#">其他</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
-    <div class="banner" style="background-image: url(#)"></div>
+    <div class="banner">
+        <div class="mask"></div>
+    </div>
     <main>
-        <div class="card">
-            <div class="pictureAndText">
+        <div class="userCard">
+            <div class="pictureAndText clearfix">
                 <div class="picture">
-                    <img src="" alt="头像">
+                    <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
                 </div>
                 <div class="text">
-                    <div class="profile">
-                        <span class="welcome">Hello</span>
-                        <h1>彭强</h1>
-                        <p>前端开发工程师</p>
-                        <hr>
-                        <dl>
-                            <dt>年龄</dt>
-                            <dd>27</dd>
-                            <dt>所在城市</dt>
-                            <dd>深圳</dd>
-                            <dt>邮箱</dt>
-                            <dd>strongpeng1992@163.com</dd>
-                            <dt>手机</dt>
-                            <dd>1357065659</dd>
-                        </dl>
-                    </div>
+                    <span class="welcome">Hello
+                        <span class="triangle"></span>
+                    </span>
+                    <h1>彭强</h1>
+                    <p>前端开发工程师</p>
+                    <hr>
+                    <dl>
+                        <dt>年龄</dt>
+                        <dd>18</dd>
+                        <dt>所在城市</dt>
+                        <dd>深圳</dd>
+                        <dt>邮箱</dt>
+                        <dd>stongpeng1992@163.com</dd>
+                        <dt>手机</dt>
+                        <dd>13634642165</dd>
+                    </dl>
                 </div>
             </div>
             <footer class="media">
                 <a href="#">
-                    <img src="#" alt="...">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
                 </a>
                 <a href="#">
-                    <img src="#" alt="...">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
                 </a>
                 <a href="#">
-                    <img src="#" alt="...">
-                </a>
-                <a href="#">
-                    <img src="#" alt="...">
-                </a>
-                <a href="#">
-                    <img src="#" alt="...">
-                </a>
-                <a href="#">
-                    <img src="#" alt="...">
-                </a>
-                <a href="#">
-                    <img src="#" alt="...">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg>
                 </a>
             </footer>
         </div>
@@ -91,39 +103,10 @@
         <a class="button" href="#">下载 PDF 简历</a>
 
         <p>
-            彭强，一位正在学习前端的小朋友
+            彭强， 前端学习中。
             <br> 技能：前端开发，Rails 开发，Node.js 开发
         </p>
-
     </main>
-    <section>
-        <h2>技能</h2>
-        <ol>
-            <li>HTML 5 &amp; CSS 3</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
-        </ol>
-    </section>
-    <section>
-        <h2>作品集</h2>
-        <nav>
-            <ol>
-                <li>所有</li>
-                <li>框架</li>
-                <li>原生JS&amp;CSS</li>
-            </ol>
-        </nav>
-
-        <div class="jobs">
-            <div class="big"></div>
-            <div class="small"></div>
-            <div class="small"></div>
-        </div>
-
-    </section>
 </body>
 
 </html>
